# protein_strucrture_analysis

./: .gitignore  README.md  hydrogen_bonds_analyzer.py  pyproject.toml  requirements.txt
airflow/: run_airflow.sh
airflow/dags/: build_graph.py  detect_hbonds.py  load_data.py  protein_pipeline.py
airflow/data/graphs/: atoms.graphml  residues.graphml
airflow/data/raw/: topology_complete.json
data/graphs/analysis1/mut10_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut11_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut12_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut13_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut14_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut15_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut16_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut17_qm/: atoms.graphml  residues.graphml
data/graphs/analysis1/mut18_qm/: atoms.graphml  residues.graphml
data/graphs/wt/: atoms.graphml  residues.graphml
data/pdbs/analysis_qm/: analysis_qm.rar
data/raw/: ff.top  topology_complete.json
notebooks/: compare_graphs.ipynb  compared_hydrogens.csv  create_topology_file.ipynb  main_pipeline.ipynb  merged.csv  prepare_data.ipynb  topology.json  wt-mut-analysis.ipynb
output/: atoms.graphml  charge_interactions_comparison.csv  hydrogen_bonds_comparison.csv  residues.graphml
tests/: test_charge_interactions.py  test_comparator.py  test_hbond_detector.py  test_pdb_loader.py  test_topology_loader.py
(+67 files in other folders)
